@@ -25,3 +25,6 @@ if BUILD_VISUAL
 else
   lib_shared = libHepMC.so
 endif
+
+# shared library versioning
+libHepMC_la_LDFLAGS = $(LIBRARY_VERSION)
